--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
