--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - checkout
       - run:
+          working_directory: ./backend
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
